force-app/main/default/objects/Lead/fields/Nurture_Track__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Track__c</fullName>
    <label>Nurture Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Business Process Efficiency</fullName>
            </value>
            <value>
                <fullName>Information Compliance</fullName>
            </value>
            <value>
                <fullName>Data Backup &amp; Recovery</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Generic Track</fullName>
            </value>
            <value>
                <fullName>Healthcare - Pathology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>