force-app/main/default/objects/Lead/fields/nwcs_ldl__EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>nwcs_ldl__EmailDomain__c</fullName>
    <description>This field must be enabled by Kubaru support to be populated.</description>
    <externalId>true</externalId>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>