force-app/main/default/objects/Lead/fields/nwcs_ldl__KubaruTerritory__c.field-meta.xml
<CustomField>
    <fullName>nwcs_ldl__KubaruTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kubaru Territory</label>
    <referenceTo>nwcs_ldl__Territory__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>