force-app/main/default/objects/Lead/fields/nwcs_ldl__MatchedAccount__c.field-meta.xml
<CustomField>
    <fullName>nwcs_ldl__MatchedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kubaru Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kubaru Matched Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>