force-app/main/default/objects/Lead/fields/nwcs_ldl__SendNotification__c.field-meta.xml
<CustomField>
    <fullName>nwcs_ldl__SendNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification</label>
    <type>Checkbox</type>
</CustomField>