force-app/main/default/objects/Lead/fields/OSR_A_R_Date__c.field-meta.xml
<CustomField>
    <fullName>OSR_A_R_Date__c</fullName>
    <label>OSR A/R Date</label>
    <type>DateTime</type>
</CustomField>