force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_ID__c</fullName>
    <label>Current Sequence ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>