force-app/main/default/objects/Lead/fields/Outreach_Initial_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Initial_Sequence_Name__c</fullName>
    <label>Initial Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>