force-app/main/default/objects/Lead/fields/Outreach_Number_of_Active_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Number_of_Active_Sequences__c</fullName>
    <label>Number of Active Sequences</label>
    <length>5</length>
    <type>Text</type>
</CustomField>