force-app/main/default/objects/Lead/fields/Outreach_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Stage__c</fullName>
    <label>Outreach Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>