force-app/main/default/objects/Lead/fields/Owner_Segment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Segment_Formula__c</fullName>
    <description>If a lead is converted this formula will display Segment of the owner during the time of conversion and if the lead is not converted it will display the segment from the user in the Last Non-Queue Owner field.</description>
    <formula>IF(IsConverted, TEXT(Owner_Details__r.Sales_Segment__c),  TEXT(Last_Non_Queue_Owner__r.Sales_Segment__c ))</formula>
    <label>Owner Segment Formula</label>
    <type>Text</type>
</CustomField>