force-app/main/default/objects/Lead/fields/Owner_Sub_Segment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sub_Segment_Formula__c</fullName>
    <formula>IF(IsConverted, TEXT(Owner_Details__r.Sales_Sub_Segment__c), TEXT(Last_Non_Queue_Owner__r.Sales_Sub_Segment__c ))</formula>
    <label>Owner Sub-Segment Formula</label>
    <type>Text</type>
</CustomField>