force-app/main/default/objects/Lead/fields/Owner_User_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_User_to_Queue__c</fullName>
    <label>Owner User to Queue</label>
    <type>DateTime</type>
</CustomField>