force-app/main/default/objects/Lead/fields/Ownership_Change__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Change__c</fullName>
    <label>Owner Queue to User</label>
    <type>DateTime</type>
</CustomField>