force-app/main/default/objects/Lead/fields/PC_Backup_PAIN__c.field-meta.xml
<CustomField>
    <fullName>PC_Backup_PAIN__c</fullName>
    <label>delete_PC Backup PAIN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>