force-app/main/default/objects/Lead/fields/PC_Backup_Plan__c.field-meta.xml
<CustomField>
    <fullName>PC_Backup_Plan__c</fullName>
    <label>delete_PC Backup Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Save to Server</fullName>
            </value>
            <value>
                <fullName>End user responsible (Flash Sticks/ DVD/ CD)</fullName>
            </value>
            <value>
                <fullName>On Premise solution - Vended</fullName>
            </value>
            <value>
                <fullName>Cloud solution - Vended</fullName>
            </value>
            <value>
                <fullName>Iron Mountain - Vended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>