force-app/main/default/objects/Lead/fields/peopleai__LastEmailReceivedFrom__c.field-meta.xml
<CustomField>
    <fullName>peopleai__LastEmailReceivedFrom__c</fullName>
    <description>The email of the person who sent the last inbound email on this lead (which was logged by people.ai)</description>
    <label>Last Email Received From (People.ai)</label>
    <type>Email</type>
</CustomField>