force-app/main/default/objects/Lead/fields/peopleai__LastEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>peopleai__LastEmailSentDate__c</fullName>
    <description>The date/time of the last outbound email on this lead (which was logged by people.ai)</description>
    <label>Last Email Sent Date (People.ai)</label>
    <type>DateTime</type>
</CustomField>