force-app/main/default/objects/Lead/fields/peopleai__LastEmailSentFrom__c.field-meta.xml
<CustomField>
    <fullName>peopleai__LastEmailSentFrom__c</fullName>
    <description>The email of the person who sent the last outbound email on this lead (which was logged by people.ai)</description>
    <label>Last Email Sent From (People.ai)</label>
    <type>Email</type>
</CustomField>