force-app/main/default/objects/Lead/fields/peopleai__LastTouch__c.field-meta.xml
<CustomField>
    <fullName>peopleai__LastTouch__c</fullName>
    <description>The date/time of the last activity on this lead (which was logged by people.ai)</description>
    <label>Last Touch (People.ai)</label>
    <type>DateTime</type>
</CustomField>