force-app/main/default/objects/Lead/fields/peopleai__NextMeetingDate__c.field-meta.xml
<CustomField>
    <fullName>peopleai__NextMeetingDate__c</fullName>
    <description>The date/time of the next meeting on this lead (which was logged by people.ai)</description>
    <label>Next Meeting Date (People.ai)</label>
    <type>DateTime</type>
</CustomField>