force-app/main/default/objects/Lead/fields/Primary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Line__c</fullName>
    <label>Primary Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Picklist</valueSetName>
    </valueSet>
</CustomField>