force-app/main/default/objects/Lead/fields/PRM_Channel_Manager_Is_Me__c.field-meta.xml
<CustomField>
    <fullName>PRM_Channel_Manager_Is_Me__c</fullName>
    <description>Compares the logged in user ID to the ID of the user selected in the Channel Manager field.</description>
    <formula>IF( Channel_Manager__r.PRM_User_ID__c = $User.Id,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Manager Is Me</label>
    <type>Checkbox</type>
</CustomField>