force-app/main/default/objects/Lead/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Most Recent Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AI/ML Insights</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
            <value>
                <fullName>Cloud Backup</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Data Center Decommissioning</fullName>
            </value>
            <value>
                <fullName>Data Centers</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Data Restoration and Migration Services</fullName>
            </value>
            <value>
                <fullName>Document Imaging</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Fixed Asset Management</fullName>
            </value>
            <value>
                <fullName>IT Asset Destruction</fullName>
            </value>
            <value>
                <fullName>Records Storage</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Tape Storage</fullName>
            </value>
            <value>
                <fullName>Warehousing and Logistics</fullName>
            </value>
            <value>
                <fullName>Workplace ITAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>