force-app/main/default/objects/Lead/fields/Proposed_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Owner_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sent by Eloqua</description>
    <label>Proposed Owner ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>