force-app/main/default/objects/Lead/fields/Re_engaged_Lead__c.field-meta.xml
<CustomField>
    <fullName>Re_engaged_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Lead has been re-engaged after a period of inactivity or a previous unsuccessful sales attempt. This field is used to identify Leads that have re-entered the sales process for reporting, automation, and business process purposes.</description>
    <inlineHelpText>Select this checkbox if the Lead has been re-engaged after previously becoming inactive, unresponsive, or otherwise exiting the active sales process.</inlineHelpText>
    <label>Re-engaged Lead</label>
    <type>Checkbox</type>
</CustomField>