force-app/main/default/objects/Lead/fields/Recall_Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Recall_Match_Date__c</fullName>
    <label>Acquisition Match Date</label>
    <type>Date</type>
</CustomField>