force-app/main/default/objects/Lead/fields/Records_Mgmt_Details__c.field-meta.xml
<CustomField>
    <fullName>Records_Mgmt_Details__c</fullName>
    <label>Records Mgmt Details</label>
    <type>TextArea</type>
</CustomField>