force-app/main/default/objects/Lead/fields/RelatedAccountMatchingComplete__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccountMatchingComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Becomes checked when the process by which Related_Account__c is evaluated and populated completes, whether a match was found or not.</description>
    <label>Related Account Matching Complete</label>
    <type>Checkbox</type>
</CustomField>