force-app/main/default/objects/Lead/fields/Retention_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Retention_Requirements__c</fullName>
    <label>Retention Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>7 years</fullName>
            </value>
            <value>
                <fullName>10+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>