force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Business User</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Economic Buyer</fullName>
            </value>
            <value>
                <fullName>Economic Decision Maker</fullName>
            </value>
            <value>
                <fullName>Evaluator</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Buyer</fullName>
            </value>
            <value>
                <fullName>Problem Owner</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>