force-app/main/default/objects/Lead/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <formula>TEXT(Owner_Details__r.Sales_District__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales District</label>
    <type>Text</type>
</CustomField>