force-app/main/default/objects/Lead/fields/Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division__c</fullName>
    <formula>TEXT( Owner_Details__r.Sales_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Division</label>
    <type>Text</type>
</CustomField>