force-app/main/default/objects/Lead/fields/Sales_Enablement_Influence__c.field-meta.xml
<CustomField>
    <fullName>Sales_Enablement_Influence__c</fullName>
    <label>delete_Sales Enablement Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liz McCormick</fullName>
            </value>
            <value>
                <fullName>Steve Buergey</fullName>
            </value>
            <value>
                <fullName>Gretchen Danzik</fullName>
            </value>
            <value>
                <fullName>Lisa Mattivi</fullName>
            </value>
            <value>
                <fullName>Krisin Parks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>