force-app/main/default/objects/Lead/fields/Sales_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Sub_Segment__c</fullName>
    <formula>TEXT(Owner_Details__r.Sales_Sub_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Sub-Segment</label>
    <type>Text</type>
</CustomField>