force-app/main/default/objects/Lead/fields/Secondary_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Product_Line__c</fullName>
    <label>Secondary Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Picklist</valueSetName>
    </valueSet>
</CustomField>