force-app/main/default/objects/Lead/fields/Send_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Alert</label>
    <type>Checkbox</type>
</CustomField>