force-app/main/default/objects/Lead/fields/Server_Backup_PAIN__c.field-meta.xml
<CustomField>
    <fullName>Server_Backup_PAIN__c</fullName>
    <label>Server Backup PAIN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>