force-app/main/default/objects/Lead/fields/Shred_Details__c.field-meta.xml
<CustomField>
    <fullName>Shred_Details__c</fullName>
    <label>Shred Details</label>
    <type>TextArea</type>
</CustomField>