force-app/main/default/objects/Lead/fields/Stage_4_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stage_4_Duration__c</fullName>
    <formula>IF(
	NOT(ISBLANK(IM_Stage_4_Entered_Date__c)) &amp;&amp; 
	ISBLANK(ConvertedDate),
		TODAY() - IM_Stage_4_Entered_Date__c,
		
IF(
	NOT(ISBLANK(IM_Stage_4_Entered_Date__c)) &amp;&amp; 
	NOT(ISBLANK(ConvertedDate)),
		ConvertedDate - IM_Stage_4_Entered_Date__c,		

NULL		
)		
)</formula>
    <label>Stage 4 Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>