force-app/main/default/objects/Lead/fields/StageComparisonDate__c.field-meta.xml
<CustomField>
    <fullName>StageComparisonDate__c</fullName>
    <description>This field is to store the higher date from IM_Stage_3_Entered_Date__c and Most_Recent_Sales_Activity__c</description>
    <label>StageComparisonDate</label>
    <type>Date</type>
</CustomField>