force-app/main/default/objects/Lead/fields/Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Name__c</fullName>
    <label>delete_Submitted By - Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>