force-app/main/default/objects/Lead/fields/SYSTEM_LS2_Lead_Rating_3_weeks_back__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_LS2_Lead_Rating_3_weeks_back__c</fullName>
    <description>Populated through the Eloqua integration</description>
    <label>SYSTEM - LS2 Lead Rating (3 weeks back)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>