force-app/main/default/objects/Lead/fields/Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Time_Frame__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Frame</label>
    <type>Checkbox</type>
</CustomField>