force-app/main/default/objects/Lead/fields/Timeframe_Defined__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timeframe Defined</label>
    <type>Checkbox</type>
</CustomField>