force-app/main/default/objects/Lead/fields/Total_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Value__c</fullName>
    <description>The total value of the deal.</description>
    <label>Total Deal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>