force-app/main/default/objects/Lead/fields/Unvended__c.field-meta.xml
<CustomField>
    <fullName>Unvended__c</fullName>
    <inlineHelpText>What percent of the customer&apos;s storage is currently unvended or in-house?</inlineHelpText>
    <label>% Unvended</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>