force-app/main/default/objects/Lead/fields/Use_Postal_Code_Lead_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Use_Postal_Code_Lead_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>delete_Use Postal Code Lead Assignment</label>
    <type>Checkbox</type>
</CustomField>