force-app/main/default/objects/Lead/fields/Vended__c.field-meta.xml
<CustomField>
    <fullName>Vended__c</fullName>
    <inlineHelpText>What percent of the customer&apos;s storage is currently vended?</inlineHelpText>
    <label>% Vended</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>