force-app/main/default/objects/Lead/fields/Whats_Being_Shredded__c.field-meta.xml
<CustomField>
    <fullName>Whats_Being_Shredded__c</fullName>
    <label>What&apos;s Being Shredded?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>All Paper Files</fullName>
            </value>
            <value>
                <fullName>Blueprints</fullName>
            </value>
            <value>
                <fullName>Case Studies</fullName>
            </value>
            <value>
                <fullName>Confidential Information</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Engineering Drawings</fullName>
            </value>
            <value>
                <fullName>Hard Drives</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Inactive Files</fullName>
            </value>
            <value>
                <fullName>Lab Books</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Marketing Materials</fullName>
            </value>
            <value>
                <fullName>Medical Records</fullName>
            </value>
            <value>
                <fullName>Notepads</fullName>
            </value>
            <value>
                <fullName>Old Documents</fullName>
            </value>
            <value>
                <fullName>Photos</fullName>
            </value>
            <value>
                <fullName>Promotional Products</fullName>
            </value>
            <value>
                <fullName>Receipts</fullName>
            </value>
            <value>
                <fullName>Work Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>